fix(focus-styles): high contrast on chromium edge (#191)

--- a/projects/ng-aquila/src/shared-styles/mixins.scss
+++ b/projects/ng-aquila/src/shared-styles/mixins.scss
@@ -12,6 +12,8 @@ $border-size: nx-border-size(xs);
 
   @media screen and (-ms-high-contrast: active) {
     box-shadow: 0 0 0 2px background, 0 0 0 6px windowText;
+    outline: 4px solid CanvasText;    // Chromium Edge
+    outline-offset: 2px;              // Chromium Edge
   }
 }
 
@@ -19,7 +21,8 @@ $border-size: nx-border-size(xs);
   @include var(box-shadow, formfield-outline-focus-box-shadow);
 
   @media screen and (-ms-high-contrast: active) {
-    box-shadow: 0 0 0 2px windowText;
+    box-shadow: 0 0 0 2px highlight;
+    border: 1px solid highlight;    // Chromium Edge
   }
 }
 
@@ -28,6 +31,7 @@ $border-size: nx-border-size(xs);
 
   @media screen and (-ms-high-contrast: active) {
     box-shadow: inset 0 0 0 4px windowText, inset 0 0 0 6px background;
+    border: 4px solid CanvasText;     // Chromium Edge
   }
 }
 
